# tgwidget-python

./: README.md  pyproject.toml
tgwidget/: __init__.py  builder.py  parser.py  pattern.py  types.py
