[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgwidget"
version = "0.1.0"
description = "Python SDK for TeleWidget — Telegram Mini App widgets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "tgwidget" }]
keywords = ["telegram", "mini-apps", "widget", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/tgwidget/tgwidget-python"
Repository = "https://github.com/tgwidget/tgwidget-python"
